# classifier-example

./: Makefile  README.md  pyproject.toml  ruff.toml
classifier_demo/: main.py
classifier_demo/api/: content_moderation.py
classifier_demo/services/: content_moderation.py
src/: main.py
src/api/: content_moderation.py
src/classifier_demo/: main.py
src/classifier_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/classifier_demo/api/: content_moderation_route.py
src/classifier_demo/middleware/: rps_tracker.py
src/classifier_demo/services/: content_moderation_service.py
tests/api/: test_content_moderation_route.py
tests/services/: test_content_moderation_service.py
