[project]
name = "classifier_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.12",
]
